--- a/build.yaml
+++ b/build.yaml
@@ -22,5 +22,5 @@ include:
 #  - board: ble_chiffre
   - board: seeeduino_xiao_ble
     shield: asymptote
-  - board: seeeduino_xiao_ble
-    shield: settings_reset   
+#   - board: seeeduino_xiao_ble
+#     shield: settings_reset   
